QNX: Fix resetting video surface

If video surface object is set to 0, it must not be accessed to set a
property on it.

Task-number: QTBUG-40746
Change-Id: I1de0e5495918d3ea06706412fab15bf1af012f36
Reviewed-by: Fabian Bumberger <fbumberger@rim.com>